--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Inter', sans-serif;
-  background-color: #F5F7FB;
+  background-color: #f5f7fb;
 }
 
 .app--container {
@@ -47,11 +47,11 @@ body {
   height: 70px;
   padding: 10px;
   margin-top: 15px;
-  
-  background-color: #4D5B9E;
+
+  background-color: #4d5b9e;
   font-size: 18px;
   font-weight: bold;
-  color: #FFFFFF;
+  color: #ffffff;
   border-radius: 10px;
   border: none;
   box-shadow: 0 0 3px #bbb8b8;
@@ -60,4 +60,90 @@ body {
 
 .startscreen--button:hover {
   background-color: #152261;
+}
+
+.quizzscreen--container {
+  /* display: flex;
+  flex-direction: column; */
+  width: 100%;
+  height: 100%;
+  padding: 45px 200px;
+}
+
+.quizzscreen--button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quizzscreen--button-container button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 75px;
+
+  border-radius: 10px;
+  border: none;
+  background-color: #4d5b9e;
+  color: #f5f7fb;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.quizzscreen--button-container button:hover {
+  background-color: #1c36b6;
+}
+
+.question--container {
+  border-bottom: 0.794239px solid #bfc3df;
+  transform: rotate(-0.05deg);
+  margin: 15px;
+}
+
+.question--header {
+  color: #293264;
+  font-size: 25px;
+  font-weight: bold;
+  font-family: 'Karla', sans-serif;
+}
+
+.question--answers-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.answer--container {
+  display: flex;
+  position: relative;
+  cursor: pointer;
+  margin: 15px;
+  font-size: 18px;
+  color: #293264;
+}
+
+.answer--checkmark input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.answer--checkmark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 35px;
+  min-width: 100px;
+  padding: 0px 8px;
+
+  border-radius: 10px;
+  border: 1px solid #4d5b9e;
+}
+
+.answer--checkmark:hover {
+  background-color: #8de1f0;
 }
